refactor(wind-common): 优化 WindObjectDigestUtils 类中的代码- 移除了不必要的变量声明- 使用了更简洁的列表转换方法